# naveenkumarbaskaran_codewise

./: .gitignore  CHANGELOG.md  README.md  action.yml  luca-reply.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/codewise/: __init__.py  cli.py  config.py  models.py  rules.py
src/codewise/core/: diff.py  docgen.py  reviewer.py  security.py  testgen.py
src/codewise/integrations/: git.py
src/codewise/llm/: prompts.py  provider.py
src/codewise/mcp/: server.py
src/codewise/output/: __init__.py  json_fmt.py  sarif_fmt.py  terminal.py
tests/: test_config.py  test_diff.py  test_git.py  test_models.py  test_rules.py
vscode-extension/: .vscodeignore  CHANGELOG.md  README.md  package-lock.json  package.json
vscode-extension/src/: diagnostics.ts  extension.ts  output.ts  runner.ts  statusbar.ts
