[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codewise-ai"
version = "0.1.0"
description = "LLM-agnostic code review, security scanning, test generation, and documentation — as CLI, MCP server, GitHub Action, or pre-commit hook."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Naveen Kumar Baskaran", email = "naveenkb142@gmail.com" }]
keywords = [
    "code-review",
    "llm",
    "ai",
    "security",
    "mcp",
    "github-action",
    "pre-commit",
    "static-analysis",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "litellm>=1.40",
    "click>=8.1",
    "rich>=13.0",
    "pydantic>=2.0",
    "unidiff>=0.7",
    "pyyaml>=6.0",
    "gitpython>=3.1",
    "jinja2>=3.1",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
all = ["codewise-ai[mcp]"]
dev = [
    "codewise-ai[all]",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
codewise = "codewise.cli:main"

[project.urls]
Homepage = "https://github.com/naveenkumarbaskaran/codewise"
Repository = "https://github.com/naveenkumarbaskaran/codewise"
Issues = "https://github.com/naveenkumarbaskaran/codewise/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/codewise"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "N815", "N817", "E741"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
