[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codewise-ai"
version = "2.0.0"
description = "LLM-agnostic code review, security scanning, test generation, and documentation — as CLI, MCP server, GitHub Action, or pre-commit hook."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Naveen Kumar Baskaran", email = "naveenkb142@gmail.com" }]
keywords = [
    "code-review",
    "llm",
    "ai",
    "security",
    "mcp",
    "github-action",
    "pre-commit",
    "static-analysis",
    "code-quality",
    "developer-tools",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "litellm>=1.50",
    "click>=8.1",
    "rich>=13.7",
    "pydantic>=2.5",
    "unidiff>=0.7",
    "pyyaml>=6.0",
    "gitpython>=3.1",
    "jinja2>=3.1",
    "tenacity>=8.2",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
all = ["codewise-ai[mcp]"]
dev = [
    "codewise-ai[all]",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
codewise = "codewise.cli:main"

[project.urls]
Homepage = "https://github.com/naveenkumarbaskaran/codewise"
Repository = "https://github.com/naveenkumarbaskaran/codewise"
Issues = "https://github.com/naveenkumarbaskaran/codewise/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/codewise"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "N815", "N817", "E741"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
